--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_info_form.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_info_form.html
@@ -183,6 +183,7 @@
 
     var ASSET_DIRECT_UPDATE_MODE =  [[${assetDirectUpdateMode}]];
 
+    var ASSET_STATUS_COLUMN_DISABLE =  [[${assetStatusColumnDisable}]];
 
 
 </script>
