--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_info_form.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_info_form.html
@@ -185,6 +185,7 @@
 
     var ASSET_STATUS_COLUMN_DISABLE =  [[${assetStatusColumnDisable}]];
 
+    var ASSET_DEFAULT_OWN_COMPANY =  [[${assetDefaultOwnCompany}]];
 
 </script>
 
