--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_list.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_list.html
@@ -2,7 +2,7 @@
 /**
  * 资产 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2021-10-09 16:37:41
+ * @since 2021-10-15 08:51:41
  */
  -->
  <!DOCTYPE html>
@@ -56,8 +56,11 @@
                     <!-- 仓库 , warehouseId ,typeName=select_box, isHideInSearch=true -->
                     <!-- 资产数量 , assetNumber ,typeName=number_input, isHideInSearch=true -->
                     <!-- 剩余数量 , remainNumber ,typeName=number_input, isHideInSearch=true -->
+                    <!-- 生产日期 , productionDate ,typeName=date_input, isHideInSearch=true -->
                     <!-- 资产RFID , rfid ,typeName=text_input, isHideInSearch=true -->
                     <!-- 附件 , attach ,typeName=upload, isHideInSearch=true -->
+                    <!-- 最近核对日期 , lastVerificationDate ,typeName=date_input, isHideInSearch=true -->
+                    <!-- 用途 , purpose ,typeName=text_input, isHideInSearch=true -->
                     <!-- 维保厂商 , maintainerName ,typeName=text_input, isHideInSearch=true -->
                     <!-- 维保状态 , maintenanceStatus ,typeName=select_box, isHideInSearch=true -->
                     <!-- 联系人 , contacts ,typeName=text_input, isHideInSearch=true -->
@@ -87,6 +90,7 @@
                     <!-- 设备标签 , equipmentLabel ,typeName=text_input, isHideInSearch=true -->
                     <!-- 设备配置 , equipmentConf ,typeName=text_area, isHideInSearch=true -->
                     <!-- 运行环境 , equipmentEnvironmentCode ,typeName=select_box, isHideInSearch=true -->
+                    <!-- 设备序列号 , equipmentSerialNumber ,typeName=text_input, isHideInSearch=true -->
                     <!-- 设备机柜 , rackId ,typeName=text_input, isHideInSearch=true -->
                     <!-- 设备机柜上位置 , rackUpNumber ,typeName=number_input, isHideInSearch=true -->
                     <!-- 设备机柜下位置 , rackDownNumber ,typeName=number_input, isHideInSearch=true -->
